--- a/main.html
+++ b/main.html
@@ -156,7 +156,10 @@ td.text-right {
 </style> 
 </head>
 
-<body>
+<body> 
+<input type=text name= "u" id = "zip" placeholder ="Zipcode">
+<button type=button id ="A">Click for results</button> 
+
 <div class="table-title">
 <h3 class="headertest">Movie Listing</h3>
 </div>
@@ -172,11 +175,11 @@ td.text-right {
 </thead>
 <tbody class="table-hover">
 <tr>
-<td class="text-left"></td>
-<td class="text-left"></td> 
-<td class="text-left"></td>
-<td class="text-left"></td> 
-<td class="text-left"></td>
+<td class="text-left" id = "a1"></td>
+<td class="text-left" id = "a2"></td> 
+<td class="text-left" id = "a3"></td>
+<td class="text-left" id = "a4"></td> 
+<td class="text-left" id = "a5"></td>
 </tr>
 <tr>
 <td class="text-left"></td>
