--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	
 	<style> 
 	body {
-  background-color: #3e94ec;
+  background-color: #FF0000;
   font-family: "Roboto", helvetica, arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
@@ -156,9 +156,56 @@ td.text-right {
 </style> 
 </head>
 
-<body> 
-<input type=text name= "u" id = "zip" placeholder ="Zipcode">
-<button type=button id ="A">Click for results</button> 
+<body>  
+
+
+<title>Hello</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link rel="stylesheet" href="css/demo.css"/>
+    <link rel="stylesheet" href="css/theme1.css"/>
+  </head>
+  <body>
+    <div id="caleandar">
+
+    </div>
+
+    <script type="text/javascript" src="js/caleandar.js"></script>
+    <script type="text/javascript" src="js/demo.js"></script>
+  </body>
+
+
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link rel="stylesheet" href="css/demo.css"/>
+    <link rel="stylesheet" href="css/theme1.css"/>
+  </head>
+  
+    <div id="caleandar">
+
+    </div>
+
+    <script type="text/javascript" src="js/caleandar.js"></script>
+    <script type="text/javascript" src="js/demo.js"></script>
+
+<input type=text name= "u" id = "zip" placeholder ="Zipcode"> 
+
+
+<input type=text" name="location" id="location1"placeholder= "search movies"/><button type=button id ="A">Click for results</button> 
+
+<form action="" class="ws-validate">
+     
+
+    <div class="form-row show-inputbtns">
+        <input type="date" data-date-inline-picker="false" data-date-popover='{
+	"inline": true
+}' />
+    </div>
+    <div class="form-row">
+        <input type="submit" align="right" />
+    </div>
+</form>
+
+
+
 
 <div class="table-title">
 <h3 class="headertest">Movie Listing</h3>
