--- a/main.html
+++ b/main.html
@@ -13,7 +13,6 @@
   font-weight: 400;
   text-rendering: optimizeLegibility;
 }
-
 div.table-title {
    display: block;
   margin: auto;
@@ -21,7 +20,6 @@ div.table-title {
   padding:5px;
   width: 100%;
 }
-
 .table-title h3 {
    color: #fafafa;
    font-size: 30px;
@@ -31,10 +29,6 @@ div.table-title {
    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
    text-transform:uppercase;
 }
-
-
-
-
 .table-fill {
   background: white;
   border-radius:3px;
@@ -60,7 +54,6 @@ th {
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   vertical-align:middle;
 }
-
 th:first-child {
   border-top-left-radius:3px;
 }
@@ -88,7 +81,6 @@ tr:hover td {
 tr:first-child {
   border-top:none;
 }
-
 tr:last-child {
   border-bottom:none;
 }
@@ -100,7 +92,6 @@ tr:nth-child(odd) td {
 tr:nth-child(odd):hover td {
   background:#4E5066;
 }
-
 tr:last-child td:first-child {
   border-bottom-left-radius:3px;
 }
@@ -119,31 +110,24 @@ td {
   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
   border-right: 1px solid #C1C3D1;
 }
-
 td:last-child {
   border-right: 0px;
 }
-
 th.text-left {
   text-align: left;
 }
-
 th.text-center {
   text-align: center;
 }
-
 th.text-right {
   text-align: right;
 }
-
 td.text-left {
   text-align: left;
 }
-
 td.text-center {
   text-align: center;
 }
-
 td.text-right {
   text-align: right;
 }
@@ -186,14 +170,10 @@ td.text-right {
     <script type="text/javascript" src="js/caleandar.js"></script>
     <script type="text/javascript" src="js/demo.js"></script>
 
-<input type=text name= "u" id = "zip" placeholder ="Zipcode"> 
-
-
-<input type=text" name="location" id="location1"placeholder= "search movies"/><button type=button id ="A">Click for results</button> 
-
+<input type=text name= "u" maxlength="5" id = "zip" placeholder ="Zipcode"> 
+<button type=button id ="A">Click for results</button> 
 <form action="" class="ws-validate">
      
-
     <div class="form-row show-inputbtns">
         <input type="date" data-date-inline-picker="false" data-date-popover='{
 	"inline": true
@@ -203,10 +183,6 @@ td.text-right {
         <input type="submit" align="right" />
     </div>
 </form>
-
-
-
-
 <div class="table-title">
 <h3 class="headertest">Movie Listing</h3>
 </div>
@@ -259,5 +235,4 @@ td.text-right {
 </tbody>
 </table>
   
-
   </body>
