--- a/main.html
+++ b/main.html
@@ -170,8 +170,10 @@ td.text-right {
     <script type="text/javascript" src="js/caleandar.js"></script>
     <script type="text/javascript" src="js/demo.js"></script>
 
-<input type=text name= "u" maxlength="5" id = "zip" placeholder ="Zipcode"> 
-<button type=button id ="A">Click for results</button> 
+<input type="text" name= "u" maxlength="5" id = "zip" placeholder ="Zipcode"> 
+
+
+<input type=text" name="location" id="location1"placeholder= "search movies"/><button type=button id ="A">Click for results</button> 
 <form action="" class="ws-validate">
      
     <div class="form-row show-inputbtns">
@@ -236,3 +238,4 @@ td.text-right {
 </table>
   
   </body>
+
