--- a/form.html
+++ b/form.html
@@ -11,15 +11,19 @@
 <body>
 
 <div class="container">
-  <h2>Vertical (basic) form</h2>
+  <h2>Movie Ratings</h2>
   <form action="/action_page.php">
     <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+      <label for="email">Username:</label>
+      <input type="email" class="form-control" id="email" placeholder="Username" name="email">
     </div>
     <div class="form-group">
-      <label for="pwd">Password:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
+      <label for="pwd">Movie Title:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Movie" name="pwd">
+    </div> 
+	 <div class="form-group">
+      <label for="pwd">Comments/Description:</label>
+      <input type="password" class="form-control" id="pwd" placeholder="Comments/Description" name="pwd">
     </div>
     <div class="checkbox">
       <label><input type="checkbox" name="remember"> Remember me</label>
