--- a/form.html
+++ b/form.html
@@ -19,11 +19,11 @@
     </div>
     <div class="form-group">
       <label for="pwd">Movie Title:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Movie" name="pwd">
+      <input type="text" class="form-control" id="text" placeholder="Movie" name="pwd">
     </div> 
 	 <div class="form-group">
       <label for="pwd">Comments/Description:</label>
-      <input type="password" class="form-control" id="pwd" placeholder="Comments/Description" name="pwd">
+      <input type="text" class="form-control" id="text" placeholder="Comments/Description" name="pwd">
     </div>
     <div class="checkbox">
       <label><input type="checkbox" name="remember"> Remember me</label>
