--- a/forum.html
+++ b/forum.html
@@ -63,7 +63,7 @@ var insert = $("#t").val();
 	 <div class="form-group">
       <label for="pwd">Comments/Description:</label><br>
       
-     <textarea placeholder="Write a review in 100 characters"></textarea>
+     <textarea  rows="4" cols="50" placeholder="Write a review in 100 characters"></textarea>
     </div>
 	<button type="button" id = "A" class="btn btn-default">Send</button>
 	</div>
